tests/cases/fail/test_generic_struct_construct_field.ixc
//@ error: Expected i32, got f32
// The turbofish binds `T = i32`, so the `value: T` field is checked against the
// substituted `i32`. Passing an `f32` there is an error — and the message naming
// `i32` (not `T`) proves the param was substituted before checking.

struct Option<T> { present: bool, value: T }

@export
proc main() i32 {
    let o: bool = Option::<i32> { present: true, value: 3.0f32 }.present;
    return 0;
}
